--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
     <link rel="stylesheet" href="./css/main.min.css"/>
 </head>
 <body>
         <!--Шапка страницы-->
-        <header class="header">
+        <!-- <header class="header">
             <div class="container">
                 <nav class="nav">
                     <a href="" class="link logo"><span class="logo-start">Web</span><span class="logo-end">Studio</span></a>
@@ -44,7 +43,7 @@
                     <h1 class="begin__title">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="begin__btn" data-modal-open>Заказать услугу</button>
                 </div>
-            </section>
+            </section> -->
             <section class="benefits">
                 <div class="container">
                     <ul class="benefits-list list">
@@ -106,7 +105,7 @@
                     </ul>
                 </div>
             </section>    
-            <section class="team">
+            <section class="team"> 
                 <div class="container">
                     <h2 class="team-title">Наша команда</h2>
                     <ul class="team-list list">
@@ -261,7 +260,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="clients">
+            <!-- <section class="clients">
                 <div class="container">
                     <h2 class="clients-title">Постоянные клиенты</h2>
                     <ul class="clients-list list">
@@ -423,7 +422,7 @@
                 </form>
             </div>
         </div>
-        <script src="./js/modal.js"></script>
+        <script src="./js/modal.js"></script> -->
 </body>
 </html>    
                    
