--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <h2 class="team-title">Наша команда</h2>
                     <ul class="team-list list">
                         <li class="team-item">
-                            <img src="./images/worker1.jpg " alt="Игорь Демьяненко" width="270" height="260">
+                            <img class="team-img" src="./images/worker1.jpg " alt="Игорь Демьяненко" >
                             <div class="team-margin">
                                 <p class="team-name">Игорь Демьяненко</p>
                                 <p lang="en" class="team-position">Product Designer</p>
@@ -147,7 +147,7 @@
                             </div>
                         </li>
                         <li class="team-item">
-                            <img src="./images/worker2.jpg" alt="Ольга Репина" width="270" height="260">
+                            <img class="team-img" src="./images/worker2.jpg" alt="Ольга Репина">
                             <div class="team-margin">
                                 <p class="team-name">Ольга Репина</p>
                                 <p lang="en" class="team-position">Frontend Developer</p>
@@ -184,7 +184,7 @@
                             </div>  
                         </li>
                         <li class="team-item">
-                            <img src="./images/worker3.jpg" alt="Николай Тарасов" width="270" height="260">
+                            <img class="team-img" src="./images/worker3.jpg" alt="Николай Тарасов">
                             <div class="team-margin">
                                 <p class="team-name">Николай Тарасов</p>
                                 <p lang="en" class="team-position">Marketing</p>
@@ -221,7 +221,7 @@
                             </div>
                         </li>
                         <li class="team-item">
-                            <img src="./images/worker4.jpg" alt="Михаил Ермаков"  width="270" height="260">
+                            <img class="team-img" src="./images/worker4.jpg" alt="Михаил Ермаков">
                             <div class="team-margin">
                                 <p class="team-name">Михаил Ермаков</p>
                                 <p lang="en" class="team-position">UI Designer</p>
