--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
         <!--Шапка страницы-->
-        <!-- <header class="header">
-            <div class="container">
+        <header class="header">
+            <div class="container header__wrap" >
+                <a href="" class="link logo"><span class="logo-start">Web</span><span class="logo-end">Studio</span></a>
                 <nav class="nav">
-                    <a href="" class="link logo"><span class="logo-start">Web</span><span class="logo-end">Studio</span></a>
+                    
                     <ul class="header-list list">
                         <li class="header-list__item"><a href="" class="header-hero__link link active">Студия</a></li>
                         <li class="header-list__item"><a href="./portfolio.html" class="header-hero__link link">Портфолио</a></li>
@@ -33,12 +34,49 @@
                                 <use href="./images/icons/symbol-defs.svg#icon-smartphone"></use>
                             </svg>+38 096 111 11 11</a>
                         </li>
-                    </ul>   
+                    </ul> 
                 </nav>
+                <button type="button" class="menu__button">
+                    <svg width="40" height="40" aria-label="Кнопка открытия мобильного меню">
+                        <use class="menu__icon-open" href="./images/icons/symbol-defs.svg#icon-menu_open"></use>
+                    </svg>
+                </button>  
+                <div class="mob-menu is-hidden">
+                    <div class="container">
+                        <div class="mob-menu__top">
+                        <button type="button" class="mob-menu__button">
+                            <svg width="40" height="40" aria-label="кнопка закрытия мобильного меню">
+                                <use class="mob-menu__icon-close" href="./images/icons/symbol-defs.svg#icon-menu_close"></use>
+                            </svg>
+                        </button>
+                        <ul class="mob-menu__list list">
+                            <li class="mob-menu__item"><a href="./" class="mob-menu__link link active">Студия</a></li>
+                            <li class="mob-menu__item"><a href="./portfolio.html" class="mob-menu__link link">Портфолио</a></li>
+                            <li class="mob-menu__item"><a href="./" class="mob-menu__link link">Контакты</a></li>
+                        </ul>
+                        </div>
+                        <div class="mob-menu__bottom">
+                        <ul class="mob-menu-contacts list">
+                            <li class="mob-menu-contacts__item">
+                                <a href="tel:+380961111111" class=" mob-menu-contacts__link link">+38 096 111 11 11</a>
+                            </li>
+                            <li class="mob-menu-contacts__item">
+                                <a href="mailto:info@devstudio.com" class=" mob-menu-contacts__link link" lang="en">info@devstudio.com</a>
+                            </li>
+                        </ul>
+                        <ul class="mob-menu-soc__list list">
+                            <li class="mob-menu-soc__item"><a class="mob-menu-soc__link link" href="#">Instagram</a></li>
+                            <li class="mob-menu-soc__item"><a class="mob-menu-soc__link link" href="#">Twitter</a></li>
+                            <li class="mob-menu-soc__item"><a class="mob-menu-soc__link link" href="#">Facebook</a></li>
+                            <li class="mob-menu-soc__item"><a class="mob-menu-soc__link link" href="#">LinkedIn</a></li>
+                        </ul>
+                        </div>
+                    </div>
+                </div>
             </div>  
         </header>
         <main>
-            <section class="begin">
+            <!-- <section class="begin">
                 <div class="container">
                     <h1 class="begin__title">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="begin__btn" data-modal-open>Заказать услугу</button>
@@ -260,7 +298,7 @@
                     </ul>
                 </div>
             </section>
-            <!-- <section class="clients">
+            <section class="clients">
                 <div class="container">
                     <h2 class="clients-title">Постоянные клиенты</h2>
                     <ul class="clients-list list">
@@ -422,7 +460,8 @@
                 </form>
             </div>
         </div>
-        <script src="./js/modal.js"></script> -->
+        <script src="./js/modal.js"></script>
+        <script src="./js/menu.js"></script>
 </body>
 </html>    
                    
