--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </svg>
                         </button>
                         <ul class="mob-menu__list list">
-                            <li class="mob-menu__item"><a href="./" class="mob-menu__link link active">Студия</a></li>
+                            <li class="mob-menu__item"><a href="./" class="mob-menu__link link">Студия</a></li>
                             <li class="mob-menu__item"><a href="./portfolio.html" class="mob-menu__link link">Портфолио</a></li>
                             <li class="mob-menu__item"><a href="./" class="mob-menu__link link">Контакты</a></li>
                         </ul>
@@ -352,7 +352,7 @@
         <footer class="footer">
             <div class="container footer-flex">
                 <div>
-                    <a href="" class="footer-logo link"><span class="logo-start">Web</span><span class="logo-footer-end">Studio</span></a>
+                    <a href="" class="footer-logo link"><span class="logo-footer-start">Web</span><span class="logo-footer-end">Studio</span></a>
                     <address>
                         <ul class="footer-list list">
                             <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -404,7 +404,6 @@
                             </svg>
                         </button>
                     </div>
-                    
                 </form>
             </div>  
         </footer>
