--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <use href="./images/icons/symbol-defs.svg#icon-envelope"></use>
                             </svg>info@devstudio.com</a>
                         </li>
-                        <li class="connect__contacts"><a href="tel:+38-096-111-11-11" class="connect__link link">
+                        <li class="connect__contacts"><a href="tel:+38-096-111-11-11" class="connect__link tel link">
                             <svg class="connect__icon" width="10" height="16">
                                 <use href="./images/icons/symbol-defs.svg#icon-smartphone"></use>
                             </svg>+38 096 111 11 11</a>
@@ -350,6 +350,7 @@
                 
         </main>
         <footer class="footer">
+            <div class="footer-wrap">
             <div class="container footer-flex">
                 <div>
                     <a href="" class="footer-logo link"><span class="logo-footer-start">Web</span><span class="logo-footer-end">Studio</span></a>
@@ -406,7 +407,7 @@
                         </button>
                     </div>
                 </form>
-              
+            </div>  
         </footer>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
