--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             </div>  
         </header>
         <main>
-            <!-- <section class="begin">
+            <section class="begin">
                 <div class="container">
                     <h1 class="begin__title">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="begin__btn" data-modal-open>Заказать услугу</button>
                 </div>
-            </section> -->
+            </section>
             <section class="benefits">
                 <div class="container">
                     <ul class="benefits-list list">
@@ -129,15 +129,27 @@
                     <h2 class="work__title">Чем мы занимаемся</h2>
                     <ul class="work-list list">
                         <li class="work-list__item">
-                            <img src="./images/box1.jpg" alt="Планшет с клавиатурой" width="370" height="294">
+                            <img srcset="
+                            ./images/box1.jpg 1x,
+                            ./images/box1-2x.jpg 2x
+                            "
+                            src="./images/box1.jpg" alt="Планшет с клавиатурой" width="370" height="294">
                             <div class="text-wrap"><p class="work-list__text">Десктопные приложения</p></div>
                         </li>
                         <li class="work-list__item">
-                            <img src="./images/box3.jpg" alt="Телефон и ноутбук" width="370" height="294">
+                            <img srcset="
+                            ./images/box3.jpg 1x,
+                            ./images/box3-2x.jpg 2x
+                            " 
+                            src="./images/box3.jpg" alt="Телефон и ноутбук" width="370" height="294">
                             <div class="text-wrap"><p class="work-list__text">Мобильные приложения</p></div>
                         </li>
                         <li class="work-list__item last">
-                            <img src="./images/box2.jpg" alt="Планшет с стилусом" width="370" height="294">
+                            <img srcset="
+                            ./images/box2.jpg 1x,
+                            ./images/box2-2x.jpg 2x
+                            " 
+                            src="./images/box2.jpg" alt="Планшет с стилусом" width="370" height="294">
                             <div class="text-wrap"><p class="work-list__text">Дизайнерские решения</p></div>
                         </li>
                     </ul>
@@ -148,7 +160,24 @@
                     <h2 class="team-title">Наша команда</h2>
                     <ul class="team-list list">
                         <li class="team-item">
-                            <img class="team-img" src="./images/worker1.jpg " alt="Игорь Демьяненко" >
+                            <picture>
+                                <source 
+                                srcset="
+                                ./images/team/worker1.jpg 1x,
+                                ./images/team/worker1-2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker1-tab.jpg 1x,
+                                ./images/team/worker1-tab-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker1-mob.jpg 1x,
+                                ./images/team/worker1-mob-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="team-img" src="./images/worker1.jpg " alt="Игорь Демьяненко" >
+                            </picture>
                             <div class="team-margin">
                                 <p class="team-name">Игорь Демьяненко</p>
                                 <p lang="en" class="team-position">Product Designer</p>
@@ -185,7 +214,24 @@
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-img" src="./images/worker2.jpg" alt="Ольга Репина">
+                            <picture>
+                                <source 
+                                srcset="
+                                ./images/team/worker2.jpg 1x,
+                                ./images/team/worker2-2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker2-tab.jpg 1x,
+                                ./images/team/worker2-tab-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker2-mob.jpg 1x,
+                                ./images/team/worker2-mob-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="team-img" src="./images/team/worker2.jpg" alt="Ольга Репина">
+                            </picture>
                             <div class="team-margin">
                                 <p class="team-name">Ольга Репина</p>
                                 <p lang="en" class="team-position">Frontend Developer</p>
@@ -222,7 +268,24 @@
                             </div>  
                         </li>
                         <li class="team-item">
-                            <img class="team-img" src="./images/worker3.jpg" alt="Николай Тарасов">
+                            <picture>
+                                <source 
+                                srcset="
+                                ./images/team/worker3.jpg 1x,
+                                ./images/team/worker3-2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker3-tab.jpg 1x,
+                                ./images/team/worker3-tab-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker3-mob.jpg 1x,
+                                ./images/team/worker3-mob-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img class="team-img" src="./images/team/worker3.jpg" alt="Николай Тарасов">
+                            </picture>
                             <div class="team-margin">
                                 <p class="team-name">Николай Тарасов</p>
                                 <p lang="en" class="team-position">Marketing</p>
@@ -259,7 +322,24 @@
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-img" src="./images/worker4.jpg" alt="Михаил Ермаков">
+                            <picture>
+                                <source 
+                                srcset="
+                                ./images/team/worker4.jpg 1x,
+                                ./images/team/worker4-2x.jpg 2x"
+                                media="(min-width: 1200px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker4-tab.jpg 1x,
+                                ./images/team/worker4-tab-2x.jpg 2x"
+                                media="(min-width: 768px)">
+                                <source 
+                                srcset="
+                                ./images/team/worker4-mob.jpg 1x,
+                                ./images/team/worker4-mob-2x.jpg 2x"
+                                media="(max-width: 767px)">
+                                <img src="./images/team/worker4-mob.jpg" alt="man in T-shirt" class="team-img">
+                            </picture>
                             <div class="team-margin">
                                 <p class="team-name">Михаил Ермаков</p>
                                 <p lang="en" class="team-position">UI Designer</p>
